# CXXException

./: CMakeLists.txt  CXXException.def  CXXHook.cpp  README.md  StackTrace.cpp  StackTraceSaver.cpp  main.cpp
.github/workflows/: ci.yml
include/CXXException/: Defines.h  StackTrace.h  StackTraceSaver.h
tests/: test_basic.cpp
